--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,23 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.30.0",
+    "@tailwindcss/vite": "^4.0.9",
     "aos": "^2.3.4",
     "browser-router": "^0.2.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
     "sass-embedded": "^1.85.1",
+    "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
   }
 }
